// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post snapshot testing Should PostContainer to render with open Modal 1`] = `
<DocumentFragment>
  <div
    class="postContainer"
  >
    <div
      class="postContainier"
    >
      <div
        class="postWrapper"
      >
        <div
          class="userNameContainer"
        >
          <a
            class="avatarLink"
            href="/userpage/635429e5461d59d5a106db66"
          >
            <img
              alt="avatar"
              class="avatar"
              src="https://res.cloudinary.com/dx84fdyhd/image/upload/v1667755687/instagram/avatar/1_wfz4lc.jpg"
            />
          </a>
          <div
            class="nicknameWrraper"
          >
            <div>
              <a
                class="nickname"
                href="/userpage/635429e5461d59d5a106db66"
              >
                <span>
                  Milda
                </span>
              </a>
              <p
                class="comment"
              />
            </div>
            <p
              class="additionalString"
            >
              Some post for deleting user
            </p>
          </div>
        </div>
        <div
          class="maneFoto"
          style="background-image: url(https://res.cloudinary.com/dx84fdyhd/image/upload/v1667755090/instagram/post14_dmu9vm.jpg);"
        >
          <img
            alt="Some post for deleting user"
            src="https://res.cloudinary.com/dx84fdyhd/image/upload/v1667755090/instagram/post14_dmu9vm.jpg"
          />
        </div>
        <div
          class="buttonBox"
        >
          <div
            class="groupBtn"
          >
            <img
              alt="not liked"
              data-testid="likeBtn"
              src="../../images/heart-white.svg"
            />
          </div>
          <img
            alt="favorite"
            data-testid="favoriteBtn"
            src="../../images/favorite.svg"
          />
        </div>
        <p
          class="description"
        >
          Some description about post
        </p>
        <div
          class="comments"
        >
          <ul>
            <li>
              <span>
                Milda
              </span>
               zxcvxzcv
            </li>
            <li>
              <span>
                Milda
              </span>
               asdasdasd
            </li>
            <li>
              <span>
                Milda
              </span>
               xzzzxcxzc
            </li>
          </ul>
        </div>
        <div
          class="addComment"
        >
          <form
            action="#"
            class="form"
          >
            <input
              class="formField"
              name="comment"
              placeholder="Напишіть коментар"
              type="text"
              value=""
            />
            <button
              class="btnSubmit"
              disabled=""
              type="submit"
            >
              Опублікувати
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Post snapshot testing Should PostContainer to render with props 1`] = `
<DocumentFragment>
  <div
    class="postContainer"
  >
    <div
      class="postContainier"
    >
      <div
        class="postWrapper"
      >
        <div
          class="userNameContainer"
        >
          <a
            class="avatarLink"
            href="/userpage/635429e5461d59d5a106db66"
          >
            <img
              alt="avatar"
              class="avatar"
              src="https://res.cloudinary.com/dx84fdyhd/image/upload/v1667755687/instagram/avatar/1_wfz4lc.jpg"
            />
          </a>
          <div
            class="nicknameWrraper"
          >
            <div>
              <a
                class="nickname"
                href="/userpage/635429e5461d59d5a106db66"
              >
                <span>
                  Milda
                </span>
              </a>
              <p
                class="comment"
              />
            </div>
            <p
              class="additionalString"
            >
              Some post for deleting user
            </p>
          </div>
        </div>
        <div
          class="maneFoto"
          style="background-image: url(https://res.cloudinary.com/dx84fdyhd/image/upload/v1667755090/instagram/post14_dmu9vm.jpg);"
        >
          <img
            alt="Some post for deleting user"
            src="https://res.cloudinary.com/dx84fdyhd/image/upload/v1667755090/instagram/post14_dmu9vm.jpg"
          />
        </div>
        <div
          class="buttonBox"
        >
          <div
            class="groupBtn"
          >
            <img
              alt="not liked"
              data-testid="likeBtn"
              src="../../images/heart-white.svg"
            />
            <img
              alt="see all comments"
              data-testid="commentBtn"
              src="../../images/comment.svg"
            />
          </div>
          <img
            alt="favorite"
            data-testid="favoriteBtn"
            src="../../images/favorite.svg"
          />
        </div>
        <p
          class="description"
        >
          Some description about post
        </p>
        <div
          class="comments"
        >
          <ul>
            <li>
              <span>
                Milda
              </span>
               xzzzxcxzc
            </li>
          </ul>
          <button
            class="showMoreBtn"
            data-testid="showMoreBtn"
            type="button"
          >
            Показати більше
          </button>
        </div>
        <div
          class="addComment"
        >
          <form
            action="#"
            class="form"
          >
            <input
              class="formField"
              name="comment"
              placeholder="Напишіть коментар"
              type="text"
              value=""
            />
            <button
              class="btnSubmit"
              disabled=""
              type="submit"
            >
              Опублікувати
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Post snapshot testing Should PostContainer to render without props 1`] = `
<DocumentFragment>
  <div
    class="postContainer"
  >
    <div
      class="postContainier"
    >
      <div
        class="postWrapper"
      >
        <div
          class="userNameContainer"
        >
          <a
            class="avatarLink"
            href="/userpage/635429e5461d59d5a106db66"
          >
            <img
              alt="avatar"
              class="avatar"
              src="https://res.cloudinary.com/dx84fdyhd/image/upload/v1667755687/instagram/avatar/1_wfz4lc.jpg"
            />
          </a>
          <div
            class="nicknameWrraper"
          >
            <div>
              <a
                class="nickname"
                href="/userpage/635429e5461d59d5a106db66"
              >
                <span>
                  Milda
                </span>
              </a>
              <p
                class="comment"
              />
            </div>
            <p
              class="additionalString"
            >
              Some post for deleting user
            </p>
          </div>
        </div>
        <div
          class="maneFoto"
          style="background-image: url(https://res.cloudinary.com/dx84fdyhd/image/upload/v1667755090/instagram/post14_dmu9vm.jpg);"
        >
          <img
            alt="Some post for deleting user"
            src="https://res.cloudinary.com/dx84fdyhd/image/upload/v1667755090/instagram/post14_dmu9vm.jpg"
          />
        </div>
        <div
          class="buttonBox"
        >
          <div
            class="groupBtn"
          >
            <img
              alt="not liked"
              data-testid="likeBtn"
              src="../../images/heart-white.svg"
            />
            <img
              alt="see all comments"
              data-testid="commentBtn"
              src="../../images/comment.svg"
            />
          </div>
          <img
            alt="favorite"
            data-testid="favoriteBtn"
            src="../../images/favorite.svg"
          />
        </div>
        <p
          class="description"
        >
          Some description about post
        </p>
        <div
          class="comments"
        >
          <ul>
            <li>
              <span>
                Milda
              </span>
               xzzzxcxzc
            </li>
          </ul>
          <button
            class="showMoreBtn"
            data-testid="showMoreBtn"
            type="button"
          >
            Показати більше
          </button>
        </div>
        <div
          class="addComment"
        >
          <form
            action="#"
            class="form"
          >
            <input
              class="formField"
              name="comment"
              placeholder="Напишіть коментар"
              type="text"
              value=""
            />
            <button
              class="btnSubmit"
              disabled=""
              type="submit"
            >
              Опублікувати
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
